--- a/content/mybook-nav.html
+++ b/content/mybook-nav.html
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
+<?xml version="1.0" encoding="UTF-8"?><html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
   <head><title>Table of contents</title></head>
-  <body><nav xmlns="http://www.w3.org/1999/xhtml" class="book" epub:type="toc">
+  <body><nav xmlns:epub="http://www.idpf.org/2007/ops" class="book" epub:type="toc">
 <ol>
+<li>
+<a href="untitled-5816b1b9-8510-412b-85c4-468ad21e9386.html">Untitled</a>
+</li>
 <li>
 <a href="module1.html">Untitled Module</a>
 </li>
